# discord-bot

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  Pipfile  README.md  config.py  docker-compose.prod.yml  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  contributing.md  issue_template.md  pull_request_template.md
.github/scripts/: deploy-docs.sh  gcrgc.sh
.github/workflows/: cleanup.yml  deploy.yml  dev.yml  prod.yml
Commands/: index.html
Commands/Cogs/FileCog/: index.html
Commands/Cogs/HabitTrackerCog/: index.html
Commands/Cogs/MusicCog/: index.html
Commands/Cogs/PollCog/: index.html
Commands/Cogs/RoleCog/: index.html
Commands/Description/: index.html
Contributing/: index.html
Contributing/Convention Guidelines/code/: index.html
Contributing/Convention Guidelines/database/: index.html
Contributing/Convention Guidelines/documentation/: index.html
Contributing/GettingStarted/: index.html
Contributing/Testing/database/: index.html
Contributing/Testing/discord_bot/: index.html
Contributing/Testing/documentation/: index.html
Contributing/Testing/stages/: index.html
assets/stylesheets/: habit_table_dark.css
cogs/: database_cog.py  file_cog.py  habit_tracker_cog.py  music_cog.py  poll_cog.py  role_cog.py
docs/: contributing.md  index.md
docs/Cogs/: index.md
docs/Cogs/Cogs List/: memeCog.md
docs/Commands/: index.md
docs/Commands/Cogs/: FileCog.md  HabitTrackerCog.md  MusicCog.md  (+2 more)
docs/Contributing/: GettingStarted.md  index.md
search/: search_index.json
(+7 files in other folders)
