[tool.poetry]
name = "tron-discord-bot"
version = "0.1.0"
description = "A bot for the tron Discord server"
authors = ["Cameron Kinsella <53635597+cameronkinsella@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {extras = ["voice"], version = "^1.7.3"}
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.9"
pymdown-extensions = "^8.2"
mdx-truly-sane-lists = "^1.2"
discord-py-slash-command = "^2.3.2"
dateparser = "^1.0.0"
motor = "^2.4.0"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^21.6b0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
